<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/ic_baseline_assignment_turned_in_24"
            android:title="@string/menu_daily_meal" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_mycart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_my_cart" />
        <item
            android:id="@id/nav_dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="Dashboard" />
        <item
            android:id="@+id/nav_manager_categories"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/menu_manager_categories" />
<!--        <item-->
<!--            android:id="@+id/nav_manager_daily_meal"-->
<!--            android:icon="@drawable/ic_baseline_assignment_turned_in_24"-->
<!--            android:title="Daily Meal Management" />-->
        <item
            android:id="@+id/nav_manager_product"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:title="Products Management" />
        <item
            android:id="@+id/nav_manager_order"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="Orders Management" />
        <item
            android:id="@id/nav_manager_user"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="Users Management" />
        <item
            android:id="@id/nav_manager_review"
            android:icon="@drawable/ic_baseline_comment_24"
            android:title="Reviews Management" />
    </group>
</menu>